deploy/base/frontend-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-gateway
spec:
  selector:
    app: frontend-gateway
  ports:
    - port: 8000
      targetPort: 8000
