deploy/base/frontend-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-gateway
spec:
  parentRefs:
    - name: cilium
      namespace: default
      sectionName: http
  hostnames:
    - pizza.cluster.home
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-gateway
          port: 8000
